kubernetes/Namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: certificate-validate
  labels:
    app: certificate-validate
