kubernetes/Ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: certificate-validate
  namespace: certificate-validate
  labels:
    app: certificate-validate
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "certificate-validate.cloud.lab.net"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: certificate-validate
            port:
              number: 5000
